kubernetes/notification/notification.yml
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "notification-service"
  name: "notification-service"
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8082
  selector:
    app: "maxilog-notification"
  type: "ClusterIP"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "maxilog-notification"
  name: "maxilog-notification"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "maxilog-notification"
  template:
    metadata:
      labels:
        app: "maxilog-notification"
    spec:
      containers:
        - image: "maxilog/notification:latest"
          imagePullPolicy: "IfNotPresent"
          name: "maxilog-notification"
          ports:
            - containerPort: 8082
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: notification
#  annotations:
#    plugins.konghq.com: kong-oidc
spec:
  rules:
    - http:
        paths:
          - path: /notification
            backend:
              serviceName: notification-service
              servicePort: 80
